# donkeyfolio

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: docker-publish.yml  release.yml
addons/tr-pdf-converter/: SESSION-NOTES-v2.10.1-wip.md  manifest.json  package.json  tsconfig.json  vite.config.ts
addons/tr-pdf-converter/src/: addon.tsx
addons/tr-pdf-converter/src/components/: ai-wizard-panel.tsx  crypto-reconcile-panel.tsx  diagnostics-panel.tsx  watcher-panel.tsx
addons/tr-pdf-converter/src/lib/: tr-account.ts  tr-ai-validator.ts  tr-crypto-resolver.ts  tr-diagnostics.ts  tr-eur-holdings.ts  tr-fx-rates.ts  tr-isin-tickers.ts  tr-isin-utils.ts  tr-multi-pdf.ts  tr-parser.ts  tr-reconcile.ts  tr-splits-watcher.ts  tr-splits.ts  tr-tax-report.ts  tr-ticker-discovery.ts  tr-to-activities.ts  tr-validation.ts
addons/trade-republic-connector/: SECURITY.md
addons/trade-republic-connector/crate/: Cargo.toml
addons/trade-republic-connector/crate/src/: auth.rs  lib.rs  models.rs  sync.rs  websocket.rs
addons/wealthfolio-importer/: manifest.json  package.json
addons/wealthfolio-importer/src/: addon.tsx
apps/frontend/: index.html  package.json  vite.config.ts
apps/frontend/public/: manifest.json
apps/frontend/src/: globals.css  routes.tsx  vite-env.d.ts
apps/tauri/: Cargo.toml  tauri.conf.json  tauri.conf.template.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: lib.rs
docs/: addons.json  donkeyfolio-addons-install.md  trade-republic-workflow.md
scripts/: gen-tauri-conf.mjs  tauri-wrapper.mjs
(+42 files in other folders)
